# pivx-bridge

./: .env.sample  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: api.rs  block_cache.rs  cache.rs  config.rs  hex.rs  index.rs  main.rs  proxy.rs  rpc.rs  scanner.rs  stream.rs
tests/: mainnet_sapling_tx.hex
